--- a/CMTH642.Assignment2/CMTH642_Assignment_2_byGC.Rmd
+++ b/CMTH642.Assignment2/CMTH642_Assignment_2_byGC.Rmd
@@ -85,9 +85,9 @@ Create a Linear Regression Model (lm), using **Calories** as the dependent varia
 # Write your code here
 food.lm <- lm(Calories ~ Carbohydrate + Protein + TotalFat + Sodium, data=USDA_Selected_Featuers)
 
-for(attr in c('Carbohydrate','Protein','TotalFat','Sodium')){
-  USDA_Selected_Featuers[,attr] <- as.factor(USDA_Selected_Featuers[,attr])
-}
+# for(attr in c('Carbohydrate','Protein','TotalFat','Sodium')){
+  # USDA_Selected_Featuers[,attr] <- as.factor(USDA_Selected_Featuers[,attr])
+# }
 
 # Below is a shorthand (since we have already subsetted the dataframe): 
 # food.lm <- lm(Calories ~ ., data=USDA_Selected_Featuers)
@@ -157,6 +157,13 @@ We wonder if illustrations improve how the students retell an article.
 ```{r}
 # Write your Answer as a comment here
 
+# Independent
+# H0: The distributions for populations 1 and 2 are identical
+# Ha: There is a difference in the distributions
+
+# Paired
+# H0: The two population relative frequency distributions are identical
+# Ha: The two population relative frequency distributinos differ in location
 ```
 
 ### Paired or Independent design?
@@ -164,7 +171,7 @@ We wonder if illustrations improve how the students retell an article.
 Based on your answer, which Wilcoxon test should you use? **(5 p)**
 ```{r}
 # Write your Answer as a comment here
-
+# Paired deisgn: Same article with or without pictures? Or else the pairing is the student
 ```
 
 ### Will you accept or reject your Null Hypothesis? ($\alpha = 0.05$)
@@ -172,7 +179,10 @@ Do illustrations improve how the students retell an article or not? **(5 p)**
 
 ```{r}
 # Write your code here
-
+A1 <- c(0.4, 0.72, 0, 0.36, 0.55)
+A2 <- c(0.77, 0.49, 0.66, 0.28, 0.38)
+wilcox.test(A1,A2, paired=T)
+# Reject H0: Illustrations do not improve how students retell an article (p > 0.05)
 ```
 
 ## Packaging Problem
@@ -188,7 +198,11 @@ Are the distributions of package weights similar for these companies? Are they n
 
 ```{r}
 # Write your code here
-
+Ca <- c( 97.1 , 101.3 , 107.8 , 101.9 , 97.4,    104.5,   99.5,    95.1)
+Cb <- c( 103.5 ,105.3  ,106.5  ,107.9  ,102.1  ,105.6 , 109.8,  97.2)
+boxplot(Ca,Cb)
+# Distributions appear different: Ca has a slight right skew while Cb has a left skew
+# Normality assumption appears to be violated, as does common variance
 ```
 
 ### Are packaging process similar or different based on weight measurements? 
@@ -201,7 +215,13 @@ Please explain.
 
 ```{r}
 # Write your code here and explain answers as a comment
+wilcox.test(Ca,Cb,paired=T)
 
+# H0: The two population relative frequency distributions are identical
+# Ha: The two population relative frequency distributinos differ in location
+
+# You can reject H0 with 95% confidence but not 99%
+# p-value = 0.023 (0.95 <= (1 - a) <= 0.99)
 ```
  
 # Correlation
@@ -210,19 +230,29 @@ A) Can you see any patterns of correlation between these two variable? **(5 p)**
 
 ```{r}
 # Write your code here and explain answers as a comment
-
+plot(mtcars$cyl, mtcars$wt)
+# There appears to be a slight positive correlation
 ```
+
 
 B) What is the best description for "cyl" and "wt" variables? (Ratio, Ordinal, Interval, or Categorical) **(5 p)**
 
 ```{r}
 # Explain answers as a comment here
+# cyl: categorical
+# wt: ratio (continuous)
 
+# Weight is unambiguously a continuous ratio. I chose categorical for cylinders 
+# because there aren't really any ranks or order between the number of cylinders. 
+# Four cylinders is neither greater nor less than six, it is more used as a
+# description of what kind of engine the vehicle has (V6, Straight-6, Flathead V8 ETC)
 ```
 
 C) Based on the description of the "cyl" and "wt" variables, should you use "Pearson" or "Spearman" correlation? Find the correlation between these two variables. **(10 p)**
 
 ```{r}
 # Write your code here and explain answers as a comment
-
+# I would use Pearson's correlation because the model accounts for categorical variables
+# (using dummy values). Since ranking cylinders doesn't make sense I wouldn't use Spearman.
+cor(mtcars$cyl, mtcars$wt) #0.78 strong positive correlation
 ```
