Assignment 2: Final version

--- a/CMTH642.Assignment2/CMTH642_Assignment_2_byGC.Rmd
+++ b/CMTH642.Assignment2/CMTH642_Assignment_2_byGC.Rmd
@@ -76,7 +76,9 @@ USDA_Selected_Featuers <- USDAclean[,c('Calories','Carbohydrate','Protein','Tota
 pairs(USDA_Selected_Featuers, lower.panel=panel.smooth, upper.panel=panel.cor)
 
 # Explain what you can conclude from this visualization as a comment here
-# Calories and TotalFat have the highest correlation: (0.8). Second is Calroies and Carbohydrate (0.42).
+# Calories and TotalFat have the highest correlation: (0.8: Very Strong). 
+# Second is Calroies and Carbohydrate (0.42: Moderate).
+# The rest are weak at best.
 
 ```
 
@@ -156,8 +158,8 @@ We wonder if illustrations improve how the students retell an article.
 # Write your Answer as a comment here
 
 # Paired
-# H0: The two population distributions are identical
-# Ha: The two population distributions are not identical
+# H0: The two population relative frequency distributions are identical
+# Ha: The two population relative frequency distributions are not identical
 ```
 
 ### Paired or Independent design?
@@ -176,7 +178,7 @@ A1 <- c(0.4, 0.72, 0, 0.36, 0.55)
 A2 <- c(0.77, 0.49, 0.66, 0.28, 0.38)
 wilcox.test(A1,A2, paired=T)
 # Fail to Reject H0: No difference between population distributions 
-# (illustrations do not improve students' ability to retell article (p > 0.05))
+# (insufficient evidence to support illustrations improving students' ability to retell article (p > 0.05))
 ```
 
 ## Packaging Problem
@@ -211,8 +213,9 @@ Please explain.
 # Write your code here and explain answers as a comment
 wilcox.test(Ca,Cb,paired=F)
 
-# H0: The two population relative frequency distributions are identical
-# Ha: The two population relative frequency distributinos differ in location
+# Wilcoxon Rank Sum Test: Independent Observations
+# H0: The distributions for populations 1 and 2 are identical
+# Ha: The distributions for populations 1 and 2 are different
 
 # You can reject H0 with 95% confidence but not 99%
 # p-value = 0.04988 (0.95 <= (1 - a) <= 0.99)
@@ -233,23 +236,27 @@ B) What is the best description for "cyl" and "wt" variables? (Ratio, Ordinal, I
 
 ```{r}
 # Explain answers as a comment here
-# cyl: categorical
+# cyl: interval
 # wt: ratio (continuous)
 
-# Weight is unambiguously a continuous ratio. I chose categorical for cylinders 
-# because there aren't really any ranks or order between the number of cylinders. 
-# Four cylinders is neither greater nor less than six, it is more used as a
-# description of what kind of engine the vehicle has (V6, Straight-6, Flathead V8 ETC)
-
+# Weight is unambiguously a continuous ratio. 
+# I chose interval for cylinder because there is a 'natural'
+# order in number of cylinders: this is a physical property of the engines.
+# However, it was a tough choice for me to make this decision as
+# I don't believe it makes sense to 'rank' engines in this way.
+# Regardless, it proves useful in this case for statistical analysis.
 ```
 
 C) Based on the description of the "cyl" and "wt" variables, should you use "Pearson" or "Spearman" correlation? Find the correlation between these two variables. **(10 p)**
 
 ```{r}
 # Write your code here and explain answers as a comment
-# I would use Pearson's correlation because the model accounts for categorical variables
-# (using dummy values). Since ranking cylinders doesn't make sense I wouldn't use Spearman.
-cor(mtcars$cyl, mtcars$wt) #0.78 strong positive correlation
+cor(mtcars$cyl, mtcars$wt, method="spearman") # ~=0.86 strong positive correlation
 
-# If, above, you decided that cylinders were interval and could be ranked (V8 > V6 > V4, etc), which doesn't make sense to me, you would pass the cor function an argument method="spearman"
+# I chose Spearman as the result of my earlier decision to treat cylinders as interval data.
+# Spearman correlation uses ranks of values as opposed to the values themselves which fits this scenario.
+# However, this was a tough decision for me to make. 
+# You could equally justify treating cylinders as categorical data
+# and use Pearson Correlation (dummy values will be used for your categorical attributes)
+
 ```
